--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -21,6 +21,7 @@
                     <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
                     <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
                     <li class="nav-item"><a href="/admin/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/admin/control_patient" class="nav-link">Tra TT bệnh nhân</a></li>
                     <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
             </nav>
@@ -58,7 +59,12 @@
                         <p>Đơn xin nghỉ</p>
                     </div>
                 </a>
-                
+                <a href="/admin/control_patient" class="text-decoration-none">
+                    <div class="card bg-white shadow-sm p-3">
+                        <div class="icon">🔎</div>
+                        <p>Tra thông tin bệnh nhân</p>
+                    </div>
+                </a>
             </div>
         </main>
 
