--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -34,7 +34,7 @@
             <button type="submit" class="btn btn-primary w-100">Đăng Nhập</button>
         </form>	
         <p class="text-center mt-3">
-            <a href="#">Quên mật khẩu?</a>
+            <a href="/patient">Tra thông tin bệnh nhân</a>
         </p>
     </div>
 </body>
