--- a/src/main/resources/templates/nuser/nuser.html
+++ b/src/main/resources/templates/nuser/nuser.html
@@ -41,7 +41,7 @@
 							<p>Công việc</p>
 						</div>
 					</a>
-					<a href="/nuser/control_account_nurse" class="text-decoration-none">
+					<a href="/nuser/on_leave" class="text-decoration-none">
 						<div class="card bg-white shadow-sm p-3">
 							<div class="icon">👩‍⚕️</div>
 							<p>xin nghỉ</p>
