--- a/src/main/resources/templates/nuserPatientCare/controlAccountDoctor.html
+++ b/src/main/resources/templates/nuserPatientCare/controlAccountDoctor.html
@@ -19,12 +19,12 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar Navigation -->
-			<nav class="col-md-3 col-lg-2 d-md-block sidebar">
-                <a href="#home" class="logo">🏨</a>
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar">
+                <a href="/nuser_patient_care/nuser_patient_care_home" class="logo">🏨</a>
                 <ul class="nav flex-column">
-                    <li class="nav-item"><a href="#home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/nuser_patient_care_home" class="nav-link">Trang Chủ</a></li>
                     <li class="nav-item"><a href="/nuser_patient_care/create_patient" class="nav-link">Tạo TT bệnh nhân</a></li>
-                    <li class="nav-item"><a href="/nuser_patient_care/control_account_doctor" class="nav-link">Tra cứu thông tin</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/control_patient" class="nav-link">Tra TT bệnh nhân</a></li>
                     <li class="nav-item"><a href="/nuser_patient_care/control_account_doctor" class="nav-link">Tra cứu Bác sĩ</a></li>
                     <li class="nav-item"><a href="/nuser_patient_care/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
