--- a/src/main/resources/templates/admin/searchMedicine.html
+++ b/src/main/resources/templates/admin/searchMedicine.html
@@ -21,10 +21,12 @@
 				<a href="/admin/admin_home" class="logo">🏨</a>
 				<ul class="nav flex-column">
                     <li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
-                    <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
+                   <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
                     <li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý bác sĩ</a></li>
                     <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
                     <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
+                    <li class="nav-item"><a href="/admin/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/admin/control_patient" class="nav-link">Tra TT bệnh nhân</a></li>
                     <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
 			</nav>
