--- a/src/main/resources/templates/nuserPatientCare/searchPatient.html
+++ b/src/main/resources/templates/nuserPatientCare/searchPatient.html
@@ -11,7 +11,11 @@
 	<Link rel="stylesheet" href="/css/admin/adminNav.css">
 	<Link rel="stylesheet" href="/css/admin/adminControlAccountDoctor.css">
 
-
+	<style>
+		.btn-primary {
+			margin-bottom: 36px;
+		}
+	</style>
 </head>
 
 <body>
@@ -29,73 +33,52 @@
                     <li class="nav-item"><a href="/nuser_patient_care/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
             </nav>
+            
 			<!-- Main Content Area -->
 			<div class="main-content col-md-9 col-lg-10">
-				<h2>Tra Cứu Bác Sĩ</h2>
+				<h2>danh sách bệnh nhân</h2>
 
-				<form method="get" action="/nuser_patient_care/search_account_doctor" class="search-form" th:object="${searchDto}">
+				<form method="get" action="/nuser_patient_care/search_patient" class="search-form" th:object="${searchDto}">
 					<div class="form-row">
 						<!-- IP Person Input -->
-						<div class="">
-							<label for="idPerson">ID Person</label>
-							<input type="text" class="form-control" id="idPerson" name="idPerson"
-								placeholder="Nhập ID Person" th:field="*{idPerson}">
+						<div class="mb-4">
+							<label for="idPatient">ID bệnh nhân</label>
+							<input type="number" class="form-control" placeholder="Nhập ID Person"
+								th:field="*{idPatient}">
 						</div>
-
 						<!-- Name Input -->
-						<div class="">
-							<label for="name">Tên</label>
-							<input type="text" class="form-control" id="name" name="name" placeholder="Nhập Tên"
-								th:field="*{name}">
+						<div class="mb-4">
+							<label for="time" class="form-label">Ngày tạo hồ sơ bệnh nhân</label>
+							<input type="date" class="form-control" th:field="*{time}">
+							</p>
 						</div>
-
-						<!-- Specialized Input -->
-						<div class="">
-							<label class="form-label">Chuyên khoa</label>
-							<select class="form-select" th:field="*{specialized}">
-								<option value=""> -- Chọn --</option>
-								<option value="INTERNAL_MEDICINE">Internal Medicine - Nội khoa</option>
-								<option value="SURGERY">Surgery - Ngoại khoa</option>
-								<option value="OBSTETRICS_AND_GYNECOLOGY">Obstetrics and Gynecology - Sản phụ khoa
-								</option>
-								<option value="PEDIATRICS">Pediatrics - Nhi khoa</option>
-								<option value="DERMATOLOGY">Dermatology - Da liễu</option>
-								<option value="PSYCHIATRY">Psychiatry - Tâm thần học</option>
-							</select>
-						</div>
-
 						<!-- Phone Number Input -->
-						<div class="">
-							<label for="phoneNumber">Số điện thoại</label>
-							<input type="text" class="form-control" id="phoneNumber" name="phoneNumber"
-								placeholder="Nhập Số Điện Thoại" th:field="*{phoneNumber}">
+						<div class="mb-4">
+							<label for="phoneNumber" class="form-label">Tên</label>
+							<input type="text" class="form-control" placeholder="Nhập tên bệnh nhân" th:field="*{name}">
+							</p>
 						</div>
 						<!-- Search Button -->
 						<button type="submit" class="btn btn-primary">Tìm kiếm</button>
 					</div>
 				</form>
 
-
 				<!-- User Cards (Vertical Layout) -->
-				<div id="user-list" th:each="doctor : ${doctors}">
+				<div id="user-list" th:each="patient : ${patients}">
 					<!-- Example of a single user card -->
-					<div class="user-card">
-						<!-- Avatar -->
-						<img class="user-avatar" th:src="@{'/avatar/' + ${doctor.avatar}}"
-							alt="Ảnh Đại Diện Người Dùng">
+					<div class="user-card" th:attr="onclick='showPatientInformation(\'' + ${patient.idPatient} + '\')'">
 
 						<!-- User Information -->
 						<div class="user-info">
-							<p class="user-info-item"><span><strong>IP: </strong></span><span
-									th:text="${doctor.idPerson}"></span></p>
-							<p class="user-info-item"><span><strong>Tên: </strong></span><span
-									th:text="${doctor.name}"></span></p>
-							<p class="user-info-item"><span><strong>Chuyên ngành: </strong></span> <span
-									th:text="${doctor.specialized}"></span></p>
-							<p class="user-info-item"><span><strong>Số điện thoại: </strong></span> <span
-									th:text="${doctor.phoneNumber}"></span></p>
+							<p class="user-info-item"><span><strong>ID bệnh nhân: </strong></span><span
+									th:text="${patient.idPatient}"></span></p>
+							<p class="user-info-item"><span><strong>Tên bệnh nhân: </strong></span><span
+									th:text="${patient.name}"></span></p>
+							<p class="user-info-item"><span><strong>Số điện thoại: </strong></span><span
+									th:text="${patient.phoneNumber}"></span></p>
+							<p class="user-info-item"><span><strong>Thời gian tạo hồ sơ: </strong></span> <span
+									th:text="${#temporals.format(patient.time, 'dd-MM-yyyy HH:mm')}"></span></p>
 						</div>
-
 					</div>
 				</div>
 
@@ -106,7 +89,7 @@
 							<ul class="pagination justify-content-center">
 								<li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
 									<a class="page-link"
-										th:href="@{/nuser_patient_care/search_account_doctor_continue(page=${currentPage - 1}, size=${size}, idperson=${idperson}, name=${name}, phonenumber=${phonenumber}, specialized=${specialized})}"
+										th:href="@{/nuser_patient_care/search_patient_continue(page=${currentPage - 1}, size=${size}, idpatient=${idpatient}, time=${time}, name=${name})}"
 										aria-label="Previous">
 										<span aria-hidden="true">&laquo;</span>
 									</a>
@@ -114,12 +97,12 @@
 								<li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}"
 									th:classappend="${currentPage == i} ? 'active'">
 									<a class="page-link"
-										th:href="@{/nuser_patient_care/search_account_doctor_continue(page=${i}, size=${size}, idperson=${idperson}, name=${name}, phonenumber=${phonenumber}, specialized=${specialized})}"
+										th:href="@{/nuser_patient_care/search_patient_continue(page=${i}, size=${size}, idpatient=${idpatient}, time=${time}, name=${name})}"
 										th:text="${i + 1}">1</a>
 								</li>
 								<li class="page-item" th:classappend="${currentPage == totalPages - 1} ? 'disabled'">
 									<a class="page-link"
-										th:href="@{/nuser_patient_care/search_account_doctor_continue(page=${currentPage + 1}, size=${size}, idperson=${idperson}, name=${name}, phonenumber=${phonenumber}, specialized=${specialized})}"
+										th:href="@{/nuser_patient_care/search_patient_continue(page=${currentPage + 1}, size=${size}, idpatient=${idpatient}, time=${time}, name=${name})}"
 										aria-label="Next">
 										<span aria-hidden="true">&raquo;</span>
 									</a>
@@ -132,11 +115,15 @@
 			</div>
 		</div>
 	</div>
+	<script>
 
+		function showPatientInformation(id) {
+			window.location.href = `/nuser_patient_care/patient_information?idpatient=${id}`;
+		}
+	</script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
