--- a/src/main/resources/templates/nuserPatientCare/showPatientInformation.html
+++ b/src/main/resources/templates/nuserPatientCare/showPatientInformation.html
@@ -22,14 +22,15 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			 <!-- Sidebar Navigation -->
+			<!-- Sidebar Navigation -->
             <nav class="col-md-3 col-lg-2 d-md-block sidebar">
-                <a href="/nuser_medicine_management/nuser_medicine_management_home" class="logo">🏨</a>
+                <a href="/nuser_patient_care/nuser_patient_care_home" class="logo">🏨</a>
                 <ul class="nav flex-column">
-                    <li class="nav-item"><a href="/nuser_medicine_management/nuser_medicine_management_home" class="nav-link">Trang Chủ</a></li>
-                    <li class="nav-item"><a href="/nuser_medicine_management/control_patient" class="nav-link">Thanh toán tiền</a></li>
-                    <li class="nav-item"><a href="/nuser_medicine_management/control_medicine" class="nav-link">Quản lý thuốc</a></li>
-                    <li class="nav-item"><a href="/nuser_medicine_management/logout" class="nav-link">Đăng Xuất</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/nuser_patient_care_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/create_patient" class="nav-link">Tạo TT bệnh nhân</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/control_patient" class="nav-link">Tra TT bệnh nhân</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/control_account_doctor" class="nav-link">Tra cứu Bác sĩ</a></li>
+                    <li class="nav-item"><a href="/nuser_patient_care/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
             </nav>
 
@@ -37,12 +38,15 @@
 			<main class="col-md-9 col-lg-10 main-content">
 				<div class="container mt-4">
 					<h2>Thông Tin Bệnh Nhân</h2>
-					<form action="/nuser_medicine_management/check_paid" method="POST" th:object="${patientDto}">
+					<form th:object="${patientDto}">
 						<input class="form-check-input" type="text" th:field="*{idPatient}" hidden>
-						<input class="form-check-input" type="checkbox" th:field="*{examined}" hidden>
-
+						
 						<div class="mb-3">
-							<input class="form-check-input" type="checkbox" th:field="*{paid}">
+							<input class="form-check-input" type="checkbox" th:field="*{examined}" disabled>
+							<label for="check" class="form-label">Đã Khám</label>
+						</div>
+						<div class="mb-3">
+							<input class="form-check-input" type="checkbox" th:field="*{paid}" disabled>
 							<label for="check" class="form-label">Đã thanh toán</label>
 						</div>
 						<div class="mb-3">
@@ -75,7 +79,7 @@
 
 						<div class="mb-3">
 							<label for="sex" class="form-label">Giới Tính</label>
-							<select class="form-select" th:field="*{sex}" readonly>
+							<select class="form-select" th:field="*{sex}" disabled>
 								<option value="MALE">Nam</option>
 								<option value="FEMALE">Nữ</option>
 							</select>
@@ -157,122 +161,14 @@
 												th:text="${medicine.price}"></span>
 										</p>
 									</div>
-									<!-- Delete Icon -->
-									<i class="bi bi-x-circle delete-icon"
-										th:attr="onclick='event.stopPropagation(); confirmDelete(\'' + ${medicine.idMedicine} + '\', \'' + ${idpatient} + '\')'"></i>
 								</div>
 							</div>
 						</div>
-
-						<button type="submit" class="btn btn-primary">Lưu Thông Tin</button>
 					</form>
 				</div>
-				
-				<form method="post" action="/nuser_medicine_management/patient_information_search_medicine"
-					class="search-form" th:object="${searchDto}">
-					<input type="text" class="form-control" id="idpatient" name="idpatient" th:value="${idpatient}"
-						hidden>
-					<div class="form-row">
-						<!-- tên thuốc -->
-						<div class="">
-							<label for="idPerson">Tên thuốc</label>
-							<input type="text" class="form-control" placeholder="Nhập tên thuốc"
-								th:field="*{nameMedicine}">
-						</div>
-
-						<!-- Nhập ngày hết hạn -->
-						<div class="">
-							<label for="name">Ngày hết hạn</label>
-							<input type="date" class="form-control" placeholder="Ngày hết hạn"
-								th:field="*{expirationDate}">
-						</div>
-
-						<!-- Số Lương -->
-						<div class="">
-							<label for="phoneNumber">Số lượng</label>
-							<input type="number" class="form-control" placeholder="Nhập Số Điện Thoại"
-								th:field="*{quantity}">
-						</div>
-						<!-- Giá thuốc -->
-						<div class="">
-							<label for="phoneNumber">Giá thuốc</label>
-							<input type="number" class="form-control" placeholder="Nhập Số Điện Thoại"
-								th:field="*{price}">
-						</div>
-						<!-- Search Button -->
-						<button type="submit" class="btn btn-primary search-btn">Tìm kiếm</button>
-					</div>
-				</form>
-
-
-
-				<!-- Medicine List -->
-				<div th:each=" medicine : ${medicines}">
-					<form method="post" action="/nuser_medicine_management/add_medicine_for_patient" id="medicine-list">
-						<input type="number" class="form-control" id="idpatient" name="idpatient"
-							th:value="${idpatient}" hidden>
-						<input type="text" class="form-control" id="idmedicine" name="idmedicine"
-							th:value="${medicine.idMedicine}" hidden>
-						<div class="medicine-card"
-							th:attr="onclick='showMedicineInfor(\'' + ${medicine.idMedicine} + '\')'">
-							<img th:src="@{'/medicine/' + ${medicine.image}}" alt="Ảnh Thuốc" class="medicine-image">
-							<div class="medicine-info">
-								<p class="medicine-info-item"><strong>Tên thuốc:</strong><span
-										th:text="${medicine.name}"></span></p>
-								<p class="medicine-info-item"><strong>Ngày hết hạn:</strong><span
-										th:text="${medicine.expirationDate}"></span></p>
-								<p class="medicine-info-item"><strong>Số lượng:</strong><span
-										th:text="${medicine.quantity}"></span></p>
-								<p class="medicine-info-item"><strong>Giá:</strong><span
-										th:text="${medicine.price}"></span>
-								</p>
-							</div>
-							<!-- Submit Button -->
-							<button type="submit" class="btn-primary">+</button>
-						</div>
-					</form>
-				</div>
-
-
-
-				<!-- Pagination -->
-				<div class="row">
-					<div class="col-md-12">
-						<nav aria-label="Page navigation">
-							<ul class="pagination justify-content-center">
-								<li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
-									<a class="page-link"
-										th:href="@{/nuser_medicine_management/patient_information_search_medicine_continue(page=${currentPage - 1}, size=${size}, idpatient=${idpatient}, name=${name}, expirationdate=${expirationdate}, quantity=${quantity}, price=${price})}"
-										aria-label="Previous">
-										<span aria-hidden="true">&laquo;</span>
-									</a>
-								</li>
-								<li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}"
-									th:classappend="${currentPage == i} ? 'active'">
-									<a class="page-link"
-										th:href="@{/nuser_medicine_management/patient_information_search_medicine_continue(page=${i}, size=${size}, idpatient=${idpatient}, name=${name}, expirationdate=${expirationdate}, quantity=${quantity}, price=${price})}"
-										th:text="${i + 1}">1</a>
-								</li>
-								<li class="page-item" th:classappend="${currentPage == totalPages - 1} ? 'disabled'">
-									<a class="page-link"
-										th:href="@{/nuser_medicine_management/patient_information_search_medicine_continue((page=${currentPage + 1}, size=${size}, idpatient=${idpatient}, name=${name}, expirationdate=${expirationdate}, quantity=${quantity}, price=${price})}"
-										aria-label="Next">
-										<span aria-hidden="true">&raquo;</span>
-									</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-
 			</main>
 		</div>
 	</div>
-	<script>
-		function confirmDelete(idMedicine, idPatient) {
-			window.location.href = `/nuser_medicine_management/delete_medicine_for_patient?idmedicine=${idMedicine}&idpatient=${idPatient}`;
-		}
-	</script>
 </body>
 
 </html>
